add readme, add slack message

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,3 +1,7 @@
 name = "what-day"
 main = "src/index.ts"
 compatibility_date = "2022-09-29"
+
+[vars]
+# The necessary secrets are:
+# - SLACK_HOOK_URL
