check allowed channel

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,8 +4,8 @@ compatibility_date = "2022-09-29"
 
 [vars]
 # The necessary secrets are:
-# - SLACK_HOOK_URL
 # - MESSAGE_TOKEN
+# - ALLOWED_CHANNELS
 
 [triggers]
 crons = []
